[package]
name = "flow-backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"




# add crates here

# ---------------------------------------------------------------------
#  Fast edit–compile–run cycle
# ---------------------------------------------------------------------
[profile.dev]
opt-level       = 0
incremental     = true
codegen-units   = 256
debug           = 1
lto             = false
panic           = "abort"
overflow-checks = false
strip           = "debuginfo"

[profile.dev.build-override]
opt-level = 3

# ---------------------------------------------------------------------
#  Fast *rebuilds* while still shipping optimised code
# ---------------------------------------------------------------------
[profile.release]
opt-level       = 3
incremental     = true
codegen-units   = 16
lto             = "thin"
strip           = "symbols"

[profile.release.package."*"]      # dependencies: quick build
opt-level     = 1
codegen-units = 256